infrastructure/platform/tpi-1/envoy-gateway/gateway-ai-alias.yaml
apiVersion: v1
kind: Service
metadata:
  name: envoy-gw-ai-tpi-1
  namespace: envoy-gateway-system
  annotations:
    service.cilium.io/global: "true"
    service.cilium.io/affinity: "local"
spec:
  type: ClusterIP
  selector:
    gateway.envoyproxy.io/owning-gateway-name: envoy-gw-ai
    gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 10080
