infrastructure/platform/tpi-1/envoy-gateway/gateway-voice.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gw-voice
  namespace: envoy-gateway-system
  labels:
    dns-visibility: internal
spec:
  gatewayClassName: envoy-gateway
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: envoy-proxy-config
    annotations:
      external-dns.alpha.kubernetes.io/hostname: voice.tpi-1.${domain_wahoo_li:=wahoo.li}
  listeners:
  - name: wyoming-whisper
    protocol: TCP
    port: 10300
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TCPRoute
  - name: wyoming-piper
    protocol: TCP
    port: 10200
    allowedRoutes:
      namespaces:
        from: All
      kinds:
      - kind: TCPRoute
